--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,56 @@
+body{
+  margin: 30px;
+  background-color: #fafafa;
+}
+
 .App {
   text-align: center;
 }
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+  height: 80px;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-color: #222;
+  height: 150px;
+  padding: 20px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.App-title {
+  font-size: 1.5em;
+}
+
+.App-intro {
+  font-size: large;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
+}
+
+button{
+  margin-left: 10px;
+}
+
+label, input, select{
+  display: block;
+  margin-bottom: 5px;
+}
+
+label, button{
+  margin-top: 10px;
+}
+
+input[type="radio"], input[type="checkbox"]{
+  display: inline-block;
+  margin-left: 20px;
+}
+
+input[type="radio"]:first, input[type="checkbox"]:first{
+  display: inline-block;
+  margin-left: 0px;
 }
